--- a/app/src/main/res/layout/activity_sponsors.xml
+++ b/app/src/main/res/layout/activity_sponsors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -74,6 +75,9 @@
         android:alpha="0.4"
         android:background="@color/transparent"
         app:tabBackground="@color/transparent"
+        app:tabIndicatorColor="@color/colorWhite"
+        app:tabIndicatorHeight="2dp"
+        app:tabUnboundedRipple="true"
         app:tabRippleColor="@color/common_google_signin_btn_text_dark_disabled"
         app:tabTextColor="@color/colorWhite"
         app:layout_constraintTop_toTopOf="@+id/toolbar" />
