--- a/app/src/main/res/layout/layout_cardview_home.xml
+++ b/app/src/main/res/layout/layout_cardview_home.xml
@@ -22,6 +22,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:cardCornerRadius="50dp"
+            app:cardElevation="8dp"
             android:background="@color/transparent"
             android:layout_gravity="center">
 
@@ -34,25 +35,22 @@
                     android:id="@+id/card_image"
                     android:layout_width="180dp"
                     android:layout_height="180dp"
-                    android:layout_marginStart="105dp"
                     android:layout_marginTop="30dp"
-                    android:layout_marginEnd="105dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/card_name"
-                    android:text="Events"
+                    android:text="@string/event"
                     android:textSize="40sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="205dp"
-                    android:layout_marginTop="250dp"
-                    android:layout_marginEnd="205dp"
+                    android:layout_marginTop="25dp"
+                    android:paddingBottom="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toBottomOf="@id/card_image" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.cardview.widget.CardView>
