--- a/app/src/main/res/layout/layout_otp.xml
+++ b/app/src/main/res/layout/layout_otp.xml
@@ -31,6 +31,7 @@
             android:layout_width="32dp"
             android:layout_height="wrap_content"
             android:textSize="28sp"
+            android:inputType="number"
             android:textAlignment="center"
             android:maxLength="1"/>
         <EditText
@@ -38,6 +39,7 @@
             android:layout_width="32dp"
             android:layout_height="wrap_content"
             android:textSize="28sp"
+            android:inputType="number"
             android:textAlignment="center"
             android:maxLength="1" />
         <EditText
@@ -45,6 +47,7 @@
             android:layout_width="32dp"
             android:layout_height="wrap_content"
             android:textSize="28sp"
+            android:inputType="number"
             android:textAlignment="center"
             android:maxLength="1"/>
         <EditText
@@ -52,6 +55,7 @@
             android:layout_width="32dp"
             android:layout_height="wrap_content"
             android:textSize="28sp"
+            android:inputType="number"
             android:textAlignment="center"
             android:maxLength="1"/>
 
@@ -59,5 +63,16 @@
 
     </RelativeLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/change_number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:textAlignment="textEnd"
+            android:text="@string/change_number"/>
+    </RelativeLayout>
 
 </LinearLayout>
