--- a/app/src/main/res/layout/activity_esummit.xml
+++ b/app/src/main/res/layout/activity_esummit.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/es_parent_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -60,14 +62,14 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent=".34" />
 
-    <StackView
-        android:id="@+id/es_stack_view"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/es_speaker_rv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="20dp"
         app:layout_constraintTop_toBottomOf="@id/es_guide_heading"
-        app:layout_constraintBottom_toBottomOf="@id/es_guide_about"
-        android:clipChildren="false"/>
+        app:layout_constraintBottom_toBottomOf="parent">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/es_guide_about"
@@ -82,6 +84,8 @@
         android:layout_height="0dp"
         android:clickable="true"
         android:focusable="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         app:layout_constraintTop_toBottomOf="@id/es_guide_about"
         android:background="@drawable/ic_curved_rect"
         app:layout_constraintBottom_toBottomOf="@id/es_about_detail"/>
@@ -101,12 +105,14 @@
         android:id="@+id/es_about_detail"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_margin="10dp"
-        android:padding="10dp"
-        app:layout_constraintTop_toBottomOf="@id/es_about_text"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="20dp"
+        android:padding="20dp"
         android:text="@string/es_intro"
-        app:layout_constraintStart_toStartOf="@id/es_about_rect"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@id/es_about_rect"
-        android:textSize="20sp"/>
+        app:layout_constraintStart_toStartOf="@id/es_about_rect"
+        app:layout_constraintTop_toBottomOf="@id/es_about_text" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
