--- a/app/src/main/res/layout/layout_otp.xml
+++ b/app/src/main/res/layout/layout_otp.xml
@@ -1,63 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="20dp"
-    android:paddingBottom="10dp"
-    android:layout_margin="30dp">
+    android:padding="20dp">
 
     <TextView
+        android:id="@+id/otp_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/otp"
         android:textSize="32sp"
-        android:textAlignment="center"/>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="15dp">
+        android:textAlignment="center"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp">
+        android:layout_margin="30dp"
+        app:layout_constraintTop_toBottomOf="@id/otp_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-        <EditText
-            android:id="@+id/otp1"
-            android:layout_width="32dp"
-            android:layout_height="wrap_content"
-            android:textSize="28sp"
-            android:textAlignment="center"
-            android:maxLength="1"/>
-        <EditText
-            android:id="@+id/otp2"
-            android:layout_width="32dp"
-            android:layout_height="wrap_content"
-            android:textSize="28sp"
-            android:textAlignment="center"
-            android:maxLength="1" />
-        <EditText
-            android:id="@+id/otp3"
-            android:layout_width="32dp"
-            android:layout_height="wrap_content"
-            android:textSize="28sp"
-            android:textAlignment="center"
-            android:maxLength="1"/>
-        <EditText
-            android:id="@+id/otp4"
-            android:layout_width="32dp"
-            android:layout_height="wrap_content"
-            android:textSize="28sp"
-            android:textAlignment="center"
-            android:maxLength="1"/>
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/otp1"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:textSize="28sp"
+                android:inputType="number"
+                android:digits="0123456789"
+                android:textAlignment="center"
+                android:singleLine="true"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/otp2"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:textSize="28sp"
+                android:inputType="number"
+                android:digits="0123456789"
+                android:textAlignment="center"
+                android:singleLine="true"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/otp3"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:textSize="28sp"
+                android:inputType="number"
+                android:digits="0123456789"
+                android:textAlignment="center"
+                android:singleLine="true"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/otp4"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:textSize="28sp"
+                android:inputType="number"
+                android:digits="0123456789"
+                android:textAlignment="center"
+                android:singleLine="true"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
 
-    </RelativeLayout>
 
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
