--- a/app/src/main/res/layout/layout_otp.xml
+++ b/app/src/main/res/layout/layout_otp.xml
@@ -66,13 +66,15 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/change_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textAlignment="textEnd"
-            android:text="@string/change_number"/>
+            android:textStyle="italic|bold"
+            android:text="Want to use another number?"/>
     </RelativeLayout>
 
 </LinearLayout>
