--- a/app/src/main/res/layout/bottom_hamburger.xml
+++ b/app/src/main/res/layout/bottom_hamburger.xml
@@ -4,9 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="16dp"
-    app:cardElevation="8dp"
     android:paddingStart="24dp"
     android:paddingEnd="24dp"
+    app:cardBackgroundColor="#E6FFFFFF"
     android:paddingBottom="16dp"
     app:cardCornerRadius="16dp">
 
@@ -16,132 +16,72 @@
         android:orientation="vertical"
         android:paddingTop="16dp">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/username"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp">
-
-            <ImageView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_gravity="center"
-                android:padding="4dp"
-                app:srcCompat="@drawable/ic_username" />
-
-
-            <TextView
-                android:id="@+id/username"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="@string/name"
-                android:padding="2dp"
-                android:layout_marginStart="40dp"
-                android:textColor="@color/colorLightBlack"
-                android:textSize="20sp" />
-
-        </LinearLayout>
+            android:layout_height="match_parent"
+            android:layout_marginStart="32dp"
+            android:padding="2dp"
+            android:text="@string/name"
+            android:textColor="@color/colorLightBlack"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="2dp"
+            android:layout_height="1dp"
             android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="24dp"
-            android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
-            android:background="#AFAFAF"/>
+            android:background="#AFAFAF" />
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
             android:id="@+id/item2"
+            style="@style/HamburgerAlertCardViewStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingStart="16dp"
-            android:paddingTop="0dp"
-            android:paddingEnd="16dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:background="?attr/selectableItemBackground">
-
-            <ImageView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_margin="-5dp"
-                android:background="@drawable/ic_otp"
-                android:layout_gravity="center"
-                android:padding="4dp" />
-
+            app:cardBackgroundColor="@color/colorHamAlertCardBackground"
+            app:cardCornerRadius="8dp">
 
             <TextView
+                style="@style/HamburgerAlertTextViewStyle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="@string/verify_otp"
-                android:padding="2dp"
-                android:layout_marginStart="40dp"
-                android:textColor="@color/aboutUsHeading"
-                android:textSize="20sp" />
+                android:text="@string/verify_otp" />
 
-        </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
             android:id="@+id/item3"
+            style="@style/HamburgerAlertCardViewStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:background="?attr/selectableItemBackground">
-
-            <ImageView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_gravity="center"
-                app:srcCompat="@drawable/about_us_team_1" />
-
+            app:cardBackgroundColor="@color/colorHamAlertCardBackground"
+            app:cardCornerRadius="8dp">
 
             <TextView
+                style="@style/HamburgerAlertTextViewStyle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="@string/about_us"
-                android:layout_marginStart="40dp"
-                android:padding="2dp"
-                android:textColor="@color/colorLightBlack"
-                android:textSize="20sp"/>
+                android:text="@string/about_us" />
 
-        </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
             android:id="@+id/item4"
+            style="@style/HamburgerAlertCardViewStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingStart="16dp"
-            android:paddingTop="0dp"
-            android:paddingEnd="16dp"
-            android:layout_marginBottom="16dp"
-            android:focusable="true"
-            android:background="?attr/selectableItemBackground">
-
-            <ImageView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_gravity="center"
-                android:padding="4dp"
-                app:srcCompat="@drawable/ic_log_out" />
-
+            android:layout_marginBottom="24dp"
+            app:cardBackgroundColor="@color/colorHamAlertCardBackground"
+            app:cardCornerRadius="8dp">
 
             <TextView
+                style="@style/HamburgerAlertTextViewStyle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="@string/log_out"
-                android:layout_marginStart="40dp"
-                android:padding="2dp"
-                android:textColor="@color/colorLightBlack"
-                android:textSize="20sp" />
-
-        </LinearLayout>
+                android:text="@string/log_out" />
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
