--- a/app/src/main/res/layout/bottom_hamburger.xml
+++ b/app/src/main/res/layout/bottom_hamburger.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -7,14 +8,16 @@
     app:cardElevation="8dp"
     android:paddingStart="24dp"
     android:paddingEnd="24dp"
-    android:paddingBottom="16dp"
+    app:cardBackgroundColor="#2F2F2F"
     app:cardCornerRadius="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingTop="16dp">
+        android:paddingTop="16dp"
+        android:layout_margin="4dp"
+        android:layout_marginBottom="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,125 +26,117 @@
             android:paddingStart="16dp"
             android:paddingEnd="16dp">
 
-            <ImageView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_gravity="center"
-                android:padding="4dp"
-                app:srcCompat="@drawable/ic_username" />
-
-
             <TextView
                 android:id="@+id/username"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="@string/name"
+                android:padding="2dp"
+                android:layout_marginStart="30dp"
+                android:textColor="@color/colorWhite"
+                android:textSize="32sp" />
+
+        </LinearLayout>
+
+        <!--<ImageView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="2dp"-->
+            <!--android:layout_marginStart="24dp"-->
+            <!--android:layout_marginEnd="24dp"-->
+            <!--android:layout_marginTop="8dp"-->
+            <!--android:layout_marginBottom="4dp"-->
+            <!--android:background="#AFAFAF"/>-->
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="20dp"
+            android:layout_margin="5dp">
+        <LinearLayout
+            android:id="@+id/item2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_margin="5dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:background="?attr/selectableItemBackground">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/verify_otp"
                 android:padding="2dp"
                 android:layout_marginStart="40dp"
                 android:textColor="@color/colorLightBlack"
                 android:textSize="20sp" />
 
         </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"
-            android:background="#AFAFAF"/>
-
-        <LinearLayout
-            android:id="@+id/item2"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingStart="16dp"
-            android:paddingTop="0dp"
-            android:paddingEnd="16dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:background="?attr/selectableItemBackground">
-
-            <ImageView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_margin="-5dp"
-                android:background="@drawable/ic_otp"
-                android:layout_gravity="center"
-                android:padding="4dp" />
-
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="@string/verify_otp"
-                android:padding="2dp"
-                android:layout_marginStart="40dp"
-                android:textColor="@color/aboutUsHeading"
-                android:textSize="20sp" />
-
-        </LinearLayout>
+            app:cardCornerRadius="20dp"
+            android:layout_margin="5dp">
+        <!--<ImageView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="1dp"-->
+            <!--android:background="#AFAFAF"-->
+            <!--android:layout_marginStart="20dp"-->
+            <!--android:layout_marginEnd="20dp"/>-->
 
         <LinearLayout
             android:id="@+id/item3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
+            android:layout_margin="5dp"
             android:clickable="true"
             android:focusable="true"
             android:background="?attr/selectableItemBackground">
 
-            <ImageView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_gravity="center"
-                app:srcCompat="@drawable/about_us_team_1" />
-
-
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="@string/about_us"
                 android:layout_marginStart="40dp"
                 android:padding="2dp"
                 android:textColor="@color/colorLightBlack"
                 android:textSize="20sp"/>
-
         </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
+        <!--<ImageView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="1dp"-->
+            <!--android:background="#AFAFAF"-->
+            <!--android:layout_marginStart="20dp"-->
+            <!--android:layout_marginEnd="20dp"/>-->
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="20dp"
+            android:layout_margin="5dp">
         <LinearLayout
             android:id="@+id/item4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingStart="16dp"
-            android:paddingTop="0dp"
-            android:paddingEnd="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_margin="5dp"
             android:focusable="true"
             android:background="?attr/selectableItemBackground">
 
-            <ImageView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_gravity="center"
-                android:padding="4dp"
-                app:srcCompat="@drawable/ic_log_out" />
-
-
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="@string/log_out"
                 android:layout_marginStart="40dp"
                 android:padding="2dp"
                 android:textColor="@color/colorLightBlack"
                 android:textSize="20sp" />
-
         </LinearLayout>
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
