--- a/app/src/main/res/anim/slide_down.xml
+++ b/app/src/main/res/anim/slide_down.xml
@@ -2,8 +2,8 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <translate
         android:duration="@android:integer/config_shortAnimTime"
-        android:fromYDelta="0%p"
+        android:fromXDelta="0%"
         android:interpolator="@android:anim/accelerate_interpolator"
-        android:toYDelta="50%p">
+        android:toXDelta="100%">
     </translate>
 </set>
