--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,30 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/parentLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EEF2F2"
+    android:fitsSystemWindows="true"
     android:orientation="vertical"
     android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-    tools:context=".activities.HomeActivity"
-    android:fitsSystemWindows="true">
+    tools:context=".activities.HomeActivity">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <ImageView
-        android:id="@+id/homebg_circle1"
-        android:layout_height="440dp"
-        android:layout_width="440dp"
-        android:layout_marginTop="-110dp"
-        android:layout_marginStart="-180dp"
-        app:srcCompat="@drawable/homebg_circle1"/>
+        <ImageView
+            android:id="@+id/homebg_circle1"
+            android:layout_width="440dp"
+            android:layout_height="440dp"
+            android:layout_marginStart="-180dp"
+            android:layout_marginTop="-110dp"
+            app:srcCompat="@drawable/homebg_circle1" />
     </RelativeLayout>
 
 
@@ -38,9 +37,9 @@
             android:id="@+id/homebg_circle2"
             android:layout_width="140dp"
             android:layout_height="140dp"
-            android:layout_marginBottom="-25dp"
             android:layout_marginLeft="-30dp"
-            app:srcCompat="@drawable/homebg_circle1"/>
+            android:layout_marginBottom="-25dp"
+            app:srcCompat="@drawable/homebg_circle1" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -53,9 +52,9 @@
             android:id="@+id/homebg_circle3"
             android:layout_width="320dp"
             android:layout_height="320dp"
-            android:layout_marginBottom="-80dp"
             android:layout_marginRight="-150dp"
-            app:srcCompat="@drawable/homebg_circle1"/>
+            android:layout_marginBottom="-80dp"
+            app:srcCompat="@drawable/homebg_circle1" />
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -63,24 +62,22 @@
         android:layout_width="match_parent"
         android:layout_height="450dp"
         android:layout_marginTop="180dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:foregroundGravity="center"
         android:layout_marginBottom="100dp"
+        android:clipToPadding="false"
+        android:foregroundGravity="center"
         android:overScrollMode="never"
-        android:clipToPadding="false"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-
-    <androidx.appcompat.widget.AppCompatImageButton
+    <ImageButton
         android:id="@+id/hamburgerButton"
-        android:layout_width="90dp"
-        android:layout_height="50dp"
-        app:srcCompat="@drawable/ic_hamburger"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_centerHorizontal="true"
-        app:layout_constraintHorizontal_bias="0.5"
+        android:layout_margin="24dp"
         android:background="@color/transparent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_hamburger" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
