--- a/app/src/main/res/drawable/spons_cardbg_4.xml
+++ b/app/src/main/res/drawable/spons_cardbg_4.xml
@@ -2,8 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#9B1AB4"
-        android:endColor="#F26BD3"
+        android:startColor="#919191"
+        android:endColor="#cccccc"
         android:angle="45"/>
     <corners android:radius="7dp"/>
 </shape>
+    <!--android:startColor="#898c85"-->
+    <!--android:endColor="#d9ddd3"-->
