--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -36,7 +36,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/event"
+        android:text="@string/name"
         android:textColor="#fff"
         android:textSize="60sp"
         android:textAllCaps="true"
