--- a/app/src/main/res/layout/es_rv_item.xml
+++ b/app/src/main/res/layout/es_rv_item.xml
@@ -1,47 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/stack_item_card"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/ic_curved_rect"
-    android:padding="15dp">
+    android:layout_height="120dp"
+    android:background="@color/transparent"
+    android:padding="10dp"
+    android:orientation="horizontal">
+
+    <ImageView
+        android:id="@+id/speaker_image"
+        android:layout_width="100dp"
+        android:layout_height="100dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:padding="15dp">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/speaker_image"
-            android:layout_width="100dp"
-            android:layout_height="100dp"/>
-
-        <LinearLayout
+        <TextView
+            android:id="@+id/speaker_name"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="60dp"
+            android:textSize="25sp"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textAlignment="center"/>
 
-            <TextView
-                android:id="@+id/speaker_name"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:textAlignment="center"
-                android:layout_weight="1"
-                android:textColor="@color/aboutusText"/>
-
-            <TextView
-                android:id="@+id/speaker_year"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:textAlignment="center"
-                android:layout_weight="1"
-                android:textColor="@color/aboutusText"/>
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/speaker_year"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:textSize="15sp"
+            android:gravity="center"
+            android:textAlignment="center"/>
 
     </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+</LinearLayout>
