--- a/app/src/main/res/layout/fragment_speaker_detail.xml
+++ b/app/src/main/res/layout/fragment_speaker_detail.xml
@@ -5,14 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.SpeakerDetail"
+    tools:context=".fragments.SpeakerFragment"
     android:background="@color/es_bg_color">
 
     <ImageView
         android:id="@+id/detail_speaker_image"
-        android:layout_width="230dp"
-        android:layout_height="230dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:layout_marginTop="80dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
