--- a/app/src/main/res/layout/layout_cardview_event.xml
+++ b/app/src/main/res/layout/layout_cardview_event.xml
@@ -37,7 +37,7 @@
                 android:id="@+id/event_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/event"
+                android:text="@string/name"
                 android:textSize="15dp"
                 android:paddingBottom="5dp"
                 android:textColor="@color/colorLightBlack"
