--- a/app/src/main/res/layout/layout_cardview_home.xml
+++ b/app/src/main/res/layout/layout_cardview_home.xml
@@ -42,7 +42,7 @@
 
                 <TextView
                     android:id="@+id/card_name"
-                    android:text="@string/event"
+                    android:text="@string/name"
                     android:textSize="40sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
